	makes the code more portable.

  * The saga of the vertical line in JPEG images (reported by dave@valinux.com)
	- a vertical line appears down the LHS of JPEG images embedded by Panda
	- visible in: acroread (linux)
	- not visible in: acroread (win32) gv (linux) xpdf (linux)

	As a sanity check, I created a PDF using acrobat on a win32 box of just
	the JPEG image in question... I then compared the streams. They are 
	definitely different, but it would appear that acrobat is converting
	the image into a TIFF stream before insertion, possibly because of this
	sort of problem.

  * Uncompressed TIFF images may now be inserted into PDF documents.

  * Grayscale TIFF images now can be embedded as well...

========================== 0.4 RC 1 Released ==================================

  * Documented all of the function calls in curves.c using autodocbook

  * Documented all of the function calls in dates.c using autodocbook

  * Fixed the date code so that it actually determines the timezone and the 
	current time properly... I need to make sure this is portable still...

  * Documented all the function calls in font.c using autodocbook

  * Documented all of the function calls in images.c using autodocbook

  * Documented all of the function calls in info.c using autodocbook

  * Documented all of the function calls in internal.c using autodocbook

  * Documented all of the function calls in memory.c using autodocbook

  * Started working on implementing PNG support in the images.c code. At first
	the code is just going to use uncompressed PNG bitmaps, but after that
	we can look into how to use the compressed bitmaps as well. I guess a
	little is better than nothing.

  * PNG now works for images without alpha channels (uncompressed inside the
	PDF for now).

  * PNG now works for images with alpha channels (the alpha channel is ignored)

  * PNG is now compressed inside the PDF document... I think this means PNG
	is now fully implementented